--- a/css/styles.css
+++ b/css/styles.css
@@ -28,13 +28,8 @@
         z-index: -1;
     }
 
-   .navbar{
-    display: flex;
-    margin-left: 11%;
-   }
-   #navDemo{
-    padding-left: 10%;
-   }
+   
+  
   
    header{
    margin: 0;
@@ -526,7 +521,7 @@ border: 1px solid rgba(0, 0, 0, 0.78);
       box-shadow: 10px 10px 5px -3px rgba(57,255,20,0.51);
 -webkit-box-shadow: 10px 10px 5px -3px rgba(57,255,20,0.51);
 -moz-box-shadow: 10px 10px 5px -3px rgba(57,255,20,0.51);
-      
+      display: flex;
     } 
    
      #htmlimg,#photoshopimg,#cssimg,#javaimg{
@@ -559,10 +554,10 @@ border: 1px solid rgba(0, 0, 0, 0.78);
    #hardwaretxt{
    
   text-align: justify;
-    margin-top: 10%;
+    margin-top: 5%;
     font-family: 'Press + Start + 2p';
     color: #39ff14;
-    font-size: clamp(0.625rem, -0.1563rem + 2.5vw, 1.25rem);
+    font-size: clamp(1.875rem, 1.0938rem + 2.5vw, 2.5rem);
    
    }
    #hardwaretxt1{
@@ -571,7 +566,7 @@ border: 1px solid rgba(0, 0, 0, 0.78);
     
     font-family: 'Press + Start + 2p';
     color: #39ff14;
-    font-size: clamp(0.625rem, -0.1563rem + 2.5vw, 1.25rem);
+    font-size: clamp(1.125rem, 0.7344rem + 1.25vw, 1.4375rem);
     
    }
     .hi{
@@ -1000,3 +995,92 @@ border: 1px solid rgba(0, 0, 0, 0.78);
     
   }
 
+  .navbar {
+    font-size: 18px;
+    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-bottom: 10px;
+  }
+  
+  .main-nav {
+    list-style-type: none;
+    display: none;
+  }
+  
+  .nav-links,
+  .logo {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.7);
+  }
+  
+  .main-nav li {
+    text-align: center;
+    margin: 15px auto;
+  }
+  
+  .logo {
+    display: inline-block;
+    font-size: 22px;
+    margin-top: 10px;
+    margin-left: 20px;
+  }
+  
+  .navbar-toggle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    cursor: pointer;
+    color: rgba(255, 255, 255, 0.8);
+    font-size: 24px;
+  }
+  
+  #chkToggle {
+    display: none;
+  }
+  
+  #chkToggle:checked + ul.main-nav {
+    display: block;
+  }
+  
+  @media screen and (min-width: 768px) {
+    .navbar {
+      display: flex;
+      justify-content: space-between;
+      padding-bottom: 0;
+      height: 70px;
+      align-items: center;
+    }
+  
+    #chkToggle:checked + ul.main-nav {
+      display: flex;
+    }
+  
+    .main-nav {
+      display: flex;
+      margin-right: 30px;
+      flex-direction: row;
+      justify-content: flex-end;
+    }
+  
+    .main-nav li {
+      margin: 0;
+    }
+  
+    .nav-links {
+      margin-left: 40px;
+    }
+  
+    .logo {
+      margin-top: 0;
+    }
+  
+    .navbar-toggle {
+      display: none;
+    }
+  
+    .logo:hover,
+    .nav-links:hover {
+      color: rgba(255, 255, 255, 1);
+    }
+  }
+  
